--- a/index.html
+++ b/index.html
@@ -49,14 +49,20 @@
                 </ul>
             </nav>
             <button class="primary-button">Pegar meu Café</button>
-            <span class="mobile-menu mobile">
-                <svg width="24" height="8" viewBox="0 0 24 8" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M24 0H0V2H24V0Z" fill="#8257E5"/>
-                    <path d="M24 6H8V8H24V6Z" fill="#8257E5"/>
-                </svg>                                      
+            <span class="mobile-menu-button mobile">
+                <img class="mobile-menu-icon mobile" src="src/assets/images/menu-buguer-open.svg" alt="">                                 
             </span>
         </div>
     </header>
+    <nav class="mobile-menu">
+        <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">Menu</a></li>
+            <li><a href="">Recompensas</a></li>
+            <li><a href="">Gift Cards</a></li>
+            <li><a href="">Lojas</a></li>
+        </ul>
+    </nav>
     <main>
         <div>
             <span class="blur-image">
@@ -76,5 +82,7 @@
             <img src="src/assets/images/rocket-coffee.png" alt="Imagem de dois copos de café com a logo da RocketCoffe">
         </div>
     </main>
+
+    <script src="src/components/MenuButton/index.js"></script>
 </body>
 </html>
